# easy_json_serde

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
