[package]
authors = ["Joseph T Lyons <JosephTLyons@gmail.com>"]
description = "Dead-simple JSON serialization / deserialization"
edition = "2021"
license = "GPL-3.0-only"
name = "easy_json_serde"
repository = "https://github.com/JosephTLyons/easy_json_serde"
version = "0.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.137"
serde_json = "1.0.81"
